--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -1,3 +1,13 @@
-strong{
+div{
     color: #fff;
+}
+
+a{
+    color: #fff;
+    text-decoration: none;
+    font-size: 16px;
+}
+
+h3{
+    font-size: 22px;
 }
